--- a/FootballInformationSystem/FootballInformationSystem.Api/FootballInformationSystem.Api.csproj
+++ b/FootballInformationSystem/FootballInformationSystem.Api/FootballInformationSystem.Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.5" />
   </ItemGroup>
 
 
