--- a/FootballInformationSystem/FootballInformationSystem.Api/appsettings.json
+++ b/FootballInformationSystem/FootballInformationSystem.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "FootballContext": "Server=(localdb)\\mssqllocaldb;Database=WebSitesContext-2;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
